--- a/content/HW1.html
+++ b/content/HW1.html
@@ -140,17 +140,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='run.html'>Next</a> >> run<br /><h1>HW1</h1>
-<p>HW1 - 網際動畫與 touch typing 佔學期成績 20%.</p>
-<p><span style="background-color: #ffff99;">HW1 必須在 2021.10.20 22:00 之前完成</span>.</p>
-<p><a href="https://github.com/mdecourse/cp2021/discussions/8">HW1 具體項目成果回報區</a>將於 2021.09.23 開啟, 於 <span style="background-color: #ff99cc;">2021.10.20 22:00 關閉</span></p>
-<ol>
-<li>請至 <a href="https://github.com">https://github.com</a> 申請 Github 帳號後, 至 <a href="https://mde.tw/cp2021/content/Task1.html">https://mde.tw/cp2021/content/Task1.html</a>  頁面, 將左右碰撞移動的紅色方塊, 改為先移動到水平畫面中心點位置後, 接著上下碰撞移動.</li>
-<li>請將 1. 的程式碼存入個人 Gist 區 (<a href="https://docs.github.com/en/github/writing-on-github/editing-and-sharing-content-with-gists/creating-gists">說明</a>).</li>
-<li>請在 1. 的程式中, 加入與 <a href="https://mde.tw/cp2021/content/Cango.html">Cango 頁面</a> Fourbar 程式碼相同功能的啟動按鈕, 讓使用者可以利用按鈕啟動或中斷紅色方塊上下碰撞移動. 完成後請將程式碼存入個人 Gist 區.</li>
-<li>請在 Gist 檔案編輯區, 利用鍵盤輸入 <a href="https://docs.github.com/en/github/writing-on-github/editing-and-sharing-content-with-gists/creating-gists#about-gists">https://docs.github.com/en/github/writing-on-github/editing-and-sharing-content-with-gists/creating-gists#about-gists</a> 中的這段英文內容, 請利用手機計時, 大概需要多少時間? 請將此段練習打字的內容與所需時間存入 Gist 檔案中.</li>
-<li>請至少練習 key in 這段英文內容三次, 然後看看是否已經了解如何透過電腦鍵盤 touch typing?</li>
-<li>接下來請利用中文輸入 <a href="https://ithelp.ithome.com.tw/articles/10206233">https://ithelp.ithome.com.tw/articles/10206233</a> 的第一段中文說明, 請利用手機計時, 大概需要多少時間?</li>
-</ol>
+<p><span>1.將左右碰撞移動的紅色方塊, 改為先移動到水平畫面中心點位置後, 接著上下碰撞移動。</span><br/><a href="https://gist.githubusercontent.com/41023137/496e72270742bb8c7c5aa56aa95f2027/raw/be5f5866038273938fbef6ff00c2fa7c909376b0/hw%25201" rel="nofollow">https://gist.githubusercontent.com/41023137/496e72270742bb8c7c5aa56aa95f2027/raw/be5f5866038273938fbef6ff00c2fa7c909376b0/hw%25201</a><br/><span>2.讓使用者可以利用按鈕啟動或中斷紅色方塊上下碰撞移動</span><br/><a href="https://gist.githubusercontent.com/41023137/25cf2e367d1e6c7ec46592bb7005354e/raw/ac28dc4afe3838679bebae231ac5f0bead00cfda/hw%25202" rel="nofollow">https://gist.githubusercontent.com/41023137/25cf2e367d1e6c7ec46592bb7005354e/raw/ac28dc4afe3838679bebae231ac5f0bead00cfda/hw%25202</a><br/><span>3.英文打字(35min.28s)</span><br/><a href="https://gist.githubusercontent.com/41023137/c344adf3ed1ea3a44928e68cace98522/raw/ce7e7837ccd017f4cf811c9122654fa4fc0b0736/hw%25203" rel="nofollow">https://gist.githubusercontent.com/41023137/c344adf3ed1ea3a44928e68cace98522/raw/ce7e7837ccd017f4cf811c9122654fa4fc0b0736/hw%25203</a><br/><span>中文打字(10min.40s)</span><br/><a href="https://gist.githubusercontent.com/41023137/cb240e14737860c55bbe08e43123cfe2/raw/db5461276121be8450c660ee441e554eb4cba3f1/hw%25204" rel="nofollow">https://gist.githubusercontent.com/41023137/cb240e14737860c55bbe08e43123cfe2/raw/db5461276121be8450c660ee441e554eb4cba3f1/hw%25204</a></p>
 <p></p>
 <br />About << <a href='About.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
         
