--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -8,7 +8,7 @@
 <h1>Exam</h1>
 <h2>w13</h2>
 <p></p>
-<p><button id="add1to100">列出十個按鈕</button></p>
+<p><button id="add1to100">列出 10 個座標</button></p>
 <p></p>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
@@ -95,7 +95,7 @@ def clear_bd1(ev):
 # 利用 ace 中的 Editor 建立 Ace 物件, 其中的輸入變數分別對應到頁面中的編輯區物件
 Ace2 = ace.Editor(editor_id="kw_editor1", console_id="kw_console1", container_id="kw__container1", storage_id="kw_py_src1" )
 
-add1to100_url = "https://gist.githubusercontent.com/41023122/c019b7a738aa6bc884fa2286c4511057/raw/179a588d7d71d02baa6fad8f35af2221f7f303f4/W13"
+add1to100_url = "hhttps://gist.githubusercontent.com/41023137/1a46aee5f84648cd1d26e8900c57f25e/raw/02aa5d8ff474fe7e50463b7fc3c630e0c50c7610/w13"
 
 # 從 gist 取得程式碼
 add_src = open(add1to100_url).read()
