--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -95,7 +95,7 @@ def clear_bd1(ev):
 # 利用 ace 中的 Editor 建立 Ace 物件, 其中的輸入變數分別對應到頁面中的編輯區物件
 Ace2 = ace.Editor(editor_id="kw_editor1", console_id="kw_console1", container_id="kw__container1", storage_id="kw_py_src1" )
 
-add1to100_url = "hhttps://gist.githubusercontent.com/41023137/1a46aee5f84648cd1d26e8900c57f25e/raw/02aa5d8ff474fe7e50463b7fc3c630e0c50c7610/w13"
+add1to100_url = "https://gist.githubusercontent.com/41023137/1a46aee5f84648cd1d26e8900c57f25e/raw/02aa5d8ff474fe7e50463b7fc3c630e0c50c7610/w13"
 
 # 從 gist 取得程式碼
 add_src = open(add1to100_url).read()
@@ -128,7 +128,8 @@ doc["add1to100"].bind('click', add)
 <!-- editor1 結束 --><hr/><!-- button 程式 1 ####################################### button 程式 1 結束-->
 <p></p>
 <!-- button 程式 2 ####################################### button 程式 2 開始-->
-<p></p><h1>HW1</h1>
+<p></p>
+<h1>HW1</h1>
 <p><span>1.將左右碰撞移動的紅色方塊, 改為先移動到水平畫面中心點位置後, 接著上下碰撞移動。</span><br/><a href="https://gist.githubusercontent.com/41023137/496e72270742bb8c7c5aa56aa95f2027/raw/be5f5866038273938fbef6ff00c2fa7c909376b0/hw%25201" rel="nofollow">https://gist.githubusercontent.com/41023137/496e72270742bb8c7c5aa56aa95f2027/raw/be5f5866038273938fbef6ff00c2fa7c909376b0/hw%25201</a><br/><span>2.讓使用者可以利用按鈕啟動或中斷紅色方塊上下碰撞移動</span><br/><a href="https://gist.githubusercontent.com/41023137/25cf2e367d1e6c7ec46592bb7005354e/raw/ac28dc4afe3838679bebae231ac5f0bead00cfda/hw%25202" rel="nofollow">https://gist.githubusercontent.com/41023137/25cf2e367d1e6c7ec46592bb7005354e/raw/ac28dc4afe3838679bebae231ac5f0bead00cfda/hw%25202</a><br/><span>3.英文打字(35min.28s)</span><br/><a href="https://gist.githubusercontent.com/41023137/c344adf3ed1ea3a44928e68cace98522/raw/ce7e7837ccd017f4cf811c9122654fa4fc0b0736/hw%25203" rel="nofollow">https://gist.githubusercontent.com/41023137/c344adf3ed1ea3a44928e68cace98522/raw/ce7e7837ccd017f4cf811c9122654fa4fc0b0736/hw%25203</a><br/><span>中文打字(10min.40s)</span><br/><a href="https://gist.githubusercontent.com/41023137/cb240e14737860c55bbe08e43123cfe2/raw/db5461276121be8450c660ee441e554eb4cba3f1/hw%25204" rel="nofollow">https://gist.githubusercontent.com/41023137/cb240e14737860c55bbe08e43123cfe2/raw/db5461276121be8450c660ee441e554eb4cba3f1/hw%25204</a></p>
 <p></p>
 <h2>run</h2>
@@ -260,6 +261,12 @@ run()
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6pJBPPrDO40" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VGkcmBaeAGM" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://github.com/mdecourse/snake-ai-pytorch">https://github.com/mdecourse/snake-ai-pytorch</a></p>
+<h2>Examples</h2>
+<p></p>
+<h2>w11</h2>
+<p></p>
+<h2>snake</h2>
+<p></p>
 <h1>Final Project</h1>
 <p>Final Project 佔學期成績 30%</p>
 <p><span style="background-color: #ffff99;">Final Project 必須在 2022.01.05 22:00 之前完成</span>.</p>
