--- a/content/HW1.html
+++ b/content/HW1.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='run.html'>run</a></li></ul><li><a href='HW2.html'>HW2</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='Examples.html'>Examples</a><li><a href='w11.html'>w11</a><li><a href='snake.html'>snake</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='run.html'>run</a><li><a href='hw1-1.html'>hw1-1</a><li><a href='hw1-2.html'>hw1-2</a></li></ul><li><a href='HW2.html'>HW2</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='Examples.html'>Examples</a><li><a href='w11.html'>w11</a><li><a href='snake.html'>snake</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,6 @@ img.add_border {
         </header>
     <div id="tipue_search_content">w13 << <a href='w13.html'>Previous</a> <a href='run.html'>Next</a> >> run<br /><h1>HW1</h1>
 <p><span>1.將左右碰撞移動的紅色方塊, 改為先移動到水平畫面中心點位置後, 接著上下碰撞移動。</span><br/><a href="https://gist.githubusercontent.com/41023137/496e72270742bb8c7c5aa56aa95f2027/raw/be5f5866038273938fbef6ff00c2fa7c909376b0/hw%25201" rel="nofollow">https://gist.githubusercontent.com/41023137/496e72270742bb8c7c5aa56aa95f2027/raw/be5f5866038273938fbef6ff00c2fa7c909376b0/hw%25201</a><br/><span>2.讓使用者可以利用按鈕啟動或中斷紅色方塊上下碰撞移動</span><br/><a href="https://gist.githubusercontent.com/41023137/25cf2e367d1e6c7ec46592bb7005354e/raw/ac28dc4afe3838679bebae231ac5f0bead00cfda/hw%25202" rel="nofollow">https://gist.githubusercontent.com/41023137/25cf2e367d1e6c7ec46592bb7005354e/raw/ac28dc4afe3838679bebae231ac5f0bead00cfda/hw%25202</a><br/><span>3.英文打字(35min.28s)</span><br/><a href="https://gist.githubusercontent.com/41023137/c344adf3ed1ea3a44928e68cace98522/raw/ce7e7837ccd017f4cf811c9122654fa4fc0b0736/hw%25203" rel="nofollow">https://gist.githubusercontent.com/41023137/c344adf3ed1ea3a44928e68cace98522/raw/ce7e7837ccd017f4cf811c9122654fa4fc0b0736/hw%25203</a><br/><span>中文打字(10min.40s)</span><br/><a href="https://gist.githubusercontent.com/41023137/cb240e14737860c55bbe08e43123cfe2/raw/db5461276121be8450c660ee441e554eb4cba3f1/hw%25204" rel="nofollow">https://gist.githubusercontent.com/41023137/cb240e14737860c55bbe08e43123cfe2/raw/db5461276121be8450c660ee441e554eb4cba3f1/hw%25204</a></p>
-<p></p>
 <br />w13 << <a href='w13.html'>Previous</a> <a href='run.html'>Next</a> >> run</div>
         
     <!-- footer -->
