--- a/config/content.htm
+++ b/config/content.htm
@@ -6,6 +6,7 @@
 <p>網站連結: <a href="https://41023137.github.io/cp2021_hw/">https://41023137.github.io/cp2021_hw/</a></p>
 <p>其他與個人或作業相關資料說明或介紹</p>
 <h1>Exam</h1>
+<h2>w12</h2>
 <h2>w13</h2>
 <p></p>
 <p><button id="add1to100">列出 10 個座標</button></p>
@@ -215,13 +216,14 @@ run()
 <!-- 程式執行 ouput 區 -->
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console"></textarea></div>
 <!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 -->
-<div id="brython_div"></div>
+<div id="brython_div"><sub></sub></div>
 <!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="https://mde.tw/cp2021/cmsimde/static/Cango-24v03-min.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/gearUtils-09.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
-<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script><h2>hw1-1</h2>
+<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script>
+<h2>hw1-1</h2>
 <p></p>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
@@ -443,7 +445,127 @@ run()
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VGkcmBaeAGM" title="YouTube video player" width="560"></iframe></p>
 <p><a href="https://github.com/mdecourse/snake-ai-pytorch">https://github.com/mdecourse/snake-ai-pytorch</a></p>
 <h2>Examples</h2>
+<p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕. (本動態頁面檔案<span> </span><a href="https://41023146.github.io/cp2021_hw/downloads/Examples.txt">Examples.txt</a>)</p>
+<p>1. 從 1 累加到 100 (以下列 button 呈現).</p>
+<p>2. 教科書 (<a href="https://link.springer.com/book/10.1007/978-981-10-3277-6">Programming with Python</a>) 2.6 Exercises, 共有三個題目, 請分別將程式製作為按鈕 (button).</p>
+<p>3. 請利用<span> </span><a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API">Canvas</a><span> </span>繪製 Fig. 3.7 的流程圖 (Flow Chart).</p>
+<p>4. 請利用 Canvas 繪製你所編寫"從 1 累加到 10"程式的流程圖 (Flow Chart).</p>
+<p>5. 請各班各組合力完成 3.5 Exercises 中的 14 個題目.</p>
+<p>6. 請各組從 4.3 Exercises 中選擇一個題目製作為頁面中的按鈕 (button).</p>
+<p>無<span> </span><a href="https://developer.mozilla.org/zh-TW/docs/Web/API/Canvas_API">Canvas</a><span> </span>繪圖需求的程式, 可放在第一區, 而採<span> </span><a href="https://developer.mozilla.org/zh-TW/docs/Web/API/Canvas_API">Canvas</a><span> </span>繪圖的程式則可放入第二區.</p>
+<p>將 Gist 中的程式導入本頁面的程式段:<span> </span><a href="https://41023146.github.io/cp2021_hw/downloads/brython_button_prog.txt">brython_button_prog.txt</a>, 只要配合 button id 對應即可導入編輯區.</p>
+<p><button id="add1to100">1 add to 100</button></p>
+<p>將 iterable 與 iterator<span> </span><a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
 <p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<div class="ace_editor ace-tm" id="kw_editor1">
+<div></div>
+<textarea autocapitalize="off" autocorrect="off" class="ace_text-input" spellcheck="false" wrap="off"></textarea>
+<div aria-hidden="true" class="ace_gutter">
+<div class="ace_layer ace_gutter-layer ace_folding-enabled">
+<div class="ace_gutter-cell">1</div>
+<div class="ace_gutter-cell">2</div>
+</div>
+<div class="ace_gutter-active-line"></div>
+</div>
+<div class="ace_scroller">
+<div class="ace_content">
+<div class="ace_layer ace_print-margin-layer">
+<div class="ace_print-margin"></div>
+</div>
+<div class="ace_layer ace_marker-layer"></div>
+<div class="ace_layer ace_text-layer">
+<div class="ace_line"><span class="ace_support ace_function">sum</span> <span class="ace_keyword ace_operator">=</span> <span class="ace_constant ace_numeric">1</span><span class="ace_keyword ace_operator">+</span><span class="ace_constant ace_numeric">2</span><span class="ace_keyword ace_operator">+</span><span class="ace_constant ace_numeric">3</span><span class="ace_keyword ace_operator">+</span><span class="ace_constant ace_numeric">4</span><span class="ace_keyword ace_operator">+</span><span class="ace_constant ace_numeric">5</span><span class="ace_keyword ace_operator">+</span><span class="ace_constant ace_numeric">6</span><span class="ace_keyword ace_operator">+</span><span class="ace_constant ace_numeric">7</span><span class="ace_keyword ace_operator">+</span><span class="ace_constant ace_numeric">8</span><span class="ace_keyword ace_operator">+</span><span class="ace_constant ace_numeric">9</span><span class="ace_keyword ace_operator">+</span><span class="ace_constant ace_numeric">10</span></div>
+<div class="ace_line"><span class="ace_support ace_function">print</span><span class="ace_paren ace_lparen">(</span><span class="ace_support ace_function">sum</span><span class="ace_paren ace_rparen">)</span></div>
+</div>
+<div class="ace_layer ace_marker-layer"></div>
+<div class="ace_layer ace_cursor-layer ace_hidden-cursors">
+<div class="ace_cursor"></div>
+</div>
+</div>
+</div>
+<div>
+<div></div>
+<div></div>
+</div>
+</div>
+<p></p>
+<p></p>
+<form><label>Filename:<span> </span><input id="kw_filename" placeholder="input file name" type="text"/>.py</label><span> </span><input onclick="doSave('kw_py_src1', 'kw_filename1');" type="submit" value="Save"/></form>
+<p></p>
+<p></p>
+<p></p>
+<p><button id="kw_run1">Run</button><span> </span><button id="kw_show_console1">Output</button><span> </span><button id="kw_clear_console1">清除輸出區</button><button id="clear_bd1">清除繪圖區</button><button onclick="window.location.reload()">Reload</button></p>
+<p></p>
+<p></p>
+<p></p>
+<div><textarea autocomplete="off" id="kw_console1"></textarea></div>
+<p></p>
+<div id="brython_div1"></div>
+<hr/>
+<p></p>
+<p>第二編輯區程式 (<a href="https://gist.github.com/mdecourse/fd325f7ff3fb71a9653bf156fe53d7dc">編輯</a><span> </span>Snake 原始碼):</p>
+<p><button id="check_input">查驗輸入字串</button><button id="do_snake">Snake</button></p>
+<p></p>
+<p></p>
+<p></p>
+<div class="ace_editor ace-tm" id="kw_editor2">
+<div></div>
+<textarea autocapitalize="off" autocorrect="off" class="ace_text-input" spellcheck="false" wrap="off"></textarea>
+<div aria-hidden="true" class="ace_gutter">
+<div class="ace_layer ace_gutter-layer ace_folding-enabled">
+<div class="ace_gutter-cell">1</div>
+</div>
+<div class="ace_gutter-active-line"></div>
+</div>
+<div class="ace_scroller">
+<div class="ace_content">
+<div class="ace_layer ace_print-margin-layer">
+<div class="ace_print-margin"></div>
+</div>
+<div class="ace_layer ace_marker-layer"></div>
+<div class="ace_layer ace_text-layer">
+<div class="ace_line"></div>
+</div>
+<div class="ace_layer ace_marker-layer"></div>
+<div class="ace_layer ace_cursor-layer ace_hidden-cursors">
+<div class="ace_cursor"></div>
+</div>
+</div>
+</div>
+<div>
+<div></div>
+<div></div>
+</div>
+</div>
+<p></p>
+<p></p>
+<form><label>Filename:<span> </span><input id="kw_filename2" placeholder="input file name" type="text"/>.py</label><span> </span><input onclick="doSave('kw_py_src2', 'kw_filename2');" type="submit" value="Save"/></form>
+<p></p>
+<p></p>
+<p></p>
+<p><button id="kw_run2">Run</button><span> </span><button id="kw_show_console2">Output</button><span> </span><button id="kw_clear_console2">清除輸出區</button><button id="clear_bd2">清除繪圖區</button><button onclick="window.location.reload()">Reload</button></p>
+<p></p>
+<p></p>
+<p></p>
+<div><textarea autocomplete="off" id="kw_console2"></textarea></div>
+<p></p>
+<div id="brython_div2"></div>
+<p></p>
+<p></p>
+<h4>References:</h4>
+<p><a href="https://zerojudge.tw/">https://zerojudge.tw/</a></p>
+<p><a href="https://shaform.com/csdream/docs/problem-solving/">https://shaform.com/csdream/docs/problem-solving/</a></p>
+<p><a href="https://onlinejudge.org/">https://onlinejudge.org/</a></p>
 <h2>w11</h2>
 <p></p>
 <h2>snake</h2>
