--- a/content/run.html
+++ b/content/run.html
@@ -128,7 +128,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='run.html'>run</a><li><a href='hw1-1.html'>hw1-1</a><li><a href='hw1-2.html'>hw1-2</a></li></ul><li><a href='HW2.html'>HW2</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='Examples.html'>Examples</a><li><a href='w11.html'>w11</a><li><a href='snake.html'>snake</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='w12.html'>w12</a><li><a href='w13.html'>w13</a></li></ul><li class='has-children'><a href='HW1.html'>HW1</a><ul class='dropdown'><li><a href='run.html'>run</a><li><a href='hw1-1.html'>hw1-1</a><li><a href='hw1-2.html'>hw1-2</a></li></ul><li><a href='HW2.html'>HW2</a><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='Examples.html'>Examples</a><li><a href='w11.html'>w11</a><li><a href='snake.html'>snake</a></li></ul><li><a href='Final Project.html'>Final Project</a></li>
                       </ul>
                 </nav>
               </div>
@@ -223,13 +223,14 @@ run()
 <!-- 程式執行 ouput 區 -->
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console"></textarea></div>
 <!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 -->
-<div id="brython_div"></div>
+<div id="brython_div"><sub></sub></div>
 <!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="https://mde.tw/cp2021/cmsimde/static/Cango-24v03-min.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/gearUtils-09.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="https://mde.tw/cp2021/cmsimde/static/sylvester.js"></script>
-<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script><br />HW1 << <a href='HW1.html'>Previous</a> <a href='hw1-1.html'>Next</a> >> hw1-1</div>
+<script src="https://mde.tw/cp2021/cmsimde/static/PrairieDraw.js"></script>
+<br />HW1 << <a href='HW1.html'>Previous</a> <a href='hw1-1.html'>Next</a> >> hw1-1</div>
         
     <!-- footer -->
       <div class="container">
